--- a/style.css
+++ b/style.css
@@ -3,19 +3,24 @@ body {
 }
 
 .hero {
-    background-image: url(./foto4.jpg);
+    background-image: url(./foto8.jpg);
     /*background-image: url('https://picsum.photos/id/1047/1920/1080');*/
     background-size: cover;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-position: center;
 }
 
 .hero h1 {
     font-size: 5rem;
     color: #fff;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+img{
+    width:100%;
 }
 
 .about {
@@ -47,9 +52,17 @@ body {
    
 }
 
-.image-wrapper {
+/*.image-wrapper {
     margin: 10px;
     width: 380px;
+    height: 220px;
+    overflow: hidden;
+}*/
+
+.image-wrapper {
+    margin-bottom: 10px;
+    max-width: 380px;
+    width:100%;
     height: 220px;
     overflow: hidden;
 }
@@ -72,29 +85,6 @@ body {
     margin-bottom: 50px;
 }
 
-/*.gallery {
-    padding: 100px 0;
-}
-
-.gallery h2 {
-    font-size: 3rem;
-    text-align: center;
-    margin-bottom: 50px;
-}
-
-.image-wrapper {
-    overflow: hidden;
-    margin-bottom: 30px;
-}
-
-.image-wrapper img {
-    transition: transform .3s ease-in-out;
-}
-
-.image-wrapper:hover img {
-    transform: scale(1.1);
-}*/
-
 .social {
     padding: 100px 0;
 }
@@ -111,6 +101,8 @@ body {
     justify-content: center;
     flex-direction: column;
     margin-bottom: 30px;
+    width: 40px;
+    height: 40px ;
 }
 
 .social-icon i {
