--- a/style.css
+++ b/style.css
@@ -100,6 +100,9 @@ img{
     justify-content: center;
     flex-direction: column;
     margin-bottom: 30px;
+}
+
+.social-icone{
     width: 40px;
     height: 40px ;
 }
